// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BS3 Text type should render input text 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="form-group has-feedback"
  >
    <div
      className="col-sm-8"
    >
      <input
        className="form-control"
        disabled={null}
        name="field"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type={null}
        value="username 0091"
      />
    </div>
    <span
      className="help-block"
    >
      What was your mothers maiden name?
    </span>
    <div
      className="clearfix"
    />
  </div>
</form>
`;

exports[`BS3 Text type should render input text 2`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="form-group has-feedback"
  >
    <div
      className="col-sm-8"
    >
      <span
        className="input-group"
      >
        <input
          className="form-control"
          disabled={null}
          name="field"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type={null}
          value="username 0091"
        />
        <span
          className="input-group-addon"
        >
          $
        </span>
      </span>
    </div>
    <span
      className="help-block"
    >
      What was your mothers maiden name?
    </span>
    <div
      className="clearfix"
    />
  </div>
</form>
`;

exports[`BS3 Text type should render input text with addon 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="form-group has-feedback"
  >
    <div
      className="col-sm-8"
    >
      <span
        className="input-group"
      >
        <input
          className="form-control"
          disabled={null}
          name="field"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type={null}
          value="username 0091"
        />
        <span
          className="input-group-addon"
        >
          $
        </span>
      </span>
    </div>
    <span
      className="help-block"
    >
      What was your mothers maiden name?
    </span>
    <div
      className="clearfix"
    />
  </div>
</form>
`;
